# ECOSCHED-AI

./: Dockerfile  README.md  app.py  grader.py  inference.py  openenv.yaml  package-lock.json  pyproject.toml  requirements.txt
ecosched-dashboard/: index.html  package-lock.json  package.json
ecosched-dashboard/src/: App.jsx  index.css
ecosched-dashboard/src/components/ui/: card.jsx
server/: app.py
