[project]
name = "ecosched-ai"
version = "0.1.0"
description = "Eco-friendly scheduling AI environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"