[project]
name = "ecosched-ai"
version = "0.1.0"
description = "Eco-friendly scheduling AI environment for OpenEnv"
requires-python = ">=3.8"

dependencies = [
    "flask",
    "numpy",
    "requests"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"